--- a/education.html
+++ b/education.html
@@ -9,73 +9,71 @@
     <meta name="keywords" content="Justin Yang, personal website, portfolio, resume, internship, recruiter, job">
     <title>Education</title>
     <link rel="stylesheet" href="styles.css">
-    <style></style>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="index.html">About Me</a>
-            <a href="education.html">Education</a>
-            <a href="experience.html">Experience</a>
-            <a href="honors.html">Honors/Awards</a>
-            <a href="hobbies.html">Hobbies/Interests</a>
-            <a href="experiment.html">Experiment Page</a>
+    <header id="site-header">
+        <nav id="main-nav" class="navigation">
+            <a href="index.html" class="nav-link">About Me</a>
+            <a href="education.html" class="nav-link">Education</a>
+            <a href="experience.html" class="nav-link">Experience</a>
+            <a href="honors.html" class="nav-link">Honors/Awards</a>
+            <a href="hobbies.html" class="nav-link">Hobbies/Interests</a>
         </nav>
     </header>
     <hr>
-    <main>
-        <h1>Education</h1>
-        <section>
-            <h2>University of California - San Diego</h2>
-            <p><b>Major:</b> B.S. Computer Science</p>
-            <p><b>GPA:</b> <i>3.84</i></p>
-            <p><b>Expected Graduation:</b> June 2026</p>
+    <main id="main-content">
+        <h1 id="education-title" class="center-text">Education</h1>
+        <section id="education-info" class="education-container">
+            <div id="education-details" class="education-details center-text">
+                <h2>University of California - San Diego</h2>
+                <p><b>Major:</b> B.S. Computer Science</p>
+                <p><b>GPA:</b> <i>3.84</i></p>
+                <p><b>Expected Graduation:</b> June 2026</p>
+            </div>
+            <section id="course-list" class="course-list center-text">
+                <h2>Courses</h2>
+                <ul>
+                    <li>Data Structures</li>
+                    <li>Design and Analysis of Algorithms</li>
+                    <li>Software Engineering</li>
+                    <li>Operating Systems Principles</li>
+                    <li>Database Systems</li>
+                    <li>Web Client Languages</li>
+                    <li>Machine Learning: Learning Algorithms</li>
+                    <li>Introduction to Parallel Computing</li>
+                    <li>Introduction to Computer Science Research</li>
+                </ul>
+            </section>
         </section>
-        <section>
-            <h2>Courses</h2>
-            <ul>
-                <li>Data Structures</li>
-                <li>Design and Analysis of Algorithms</li>
-                <li>Software Engineering</li>
-                <li>Operating Systems Principles</li>
-                <li>Database Systems</li>
-                <li>Web Client Languages</li>
-                <li>Machine Learning: Learning Algorithms</li>
-                <li>Introduction to Parallel Computing</li>
-                <li>Introduction to Computer Science Research</li>
-            </ul>
+        <section id="education-gallery" class="education-images">
+            <img src="media/ucsd1.jpeg" alt="UC San Diego campus view" class="edu-img">
+            <img src="media/ucsd2.webp" alt="Geisel Library at UC San Diego" class="edu-img">
+            <img src="media/ucsd3.jpeg" alt="Sunset at UC San Diego" class="edu-img">
         </section>
-        <div>
-            <img src="media/ucsd1.jpeg" alt="Photo" height="400">
-            <img src="media/ucsd2.webp" alt="Photo" height="400">
-            <img src="media/ucsd3.jpeg" alt="Photo" height="400">
-        </div>
     </main>
     <hr>
-    <footer>
-        <table>
-            <caption>
-                Contact info:
-            </caption>
+    <footer id="site-footer">
+        <table id="contact-info" class="contact-table">
+            <caption>Contact Info</caption>
             <colgroup>
                 <col span="6">
             </colgroup>
             <tbody>
                 <tr>
-                    <th><img src="media/gmail.png" alt="Photo" height="15"></th>
+                    <th><img src="media/gmail.png" alt="Gmail icon" height="15"></th>
                     <td>Email</td>
-                    <th><img src="media/linkedin.png" alt="Photo" height="15"></th>
+                    <th><img src="media/linkedin.png" alt="LinkedIn icon" height="15"></th>
                     <td>LinkedIn</td>
-                    <th><img src="media/github.svg" alt="Photo" height="15"></th>
+                    <th><img src="media/github.svg" alt="GitHub icon" height="15"></th>
                     <td>GitHub</td>
                 </tr>
             </tbody>
         </table>
-        <address>
-            <p>San Dieog, CA</p>
+        <address id="location-info">
+            <p>San Diego, CA</p>
         </address>
-        <a href="docs/justin_yang_resume.pdf" target="_blank">Resume</a>
+        <a href="docs/justin_yang_resume.pdf" target="_blank" id="resume-link">Resume</a>
     </footer>
 </body>
 
