--- a/education.html
+++ b/education.html
@@ -21,7 +21,6 @@
             <a href="hobbies.html" class="nav-link">Hobbies/Interests</a>
         </nav>
     </header>
-    <hr>
     <main id="main-content">
         <h1 id="education-title" class="center-text">Education</h1>
         <section id="education-info" class="education-container">
@@ -52,20 +51,19 @@
             <img src="media/ucsd3.jpeg" alt="Sunset at UC San Diego" class="edu-img">
         </section>
     </main>
-    <hr>
     <footer id="site-footer">
         <table id="contact-info" class="contact-table">
-            <caption>Contact Info</caption>
+            <caption>Contact info:</caption>
             <colgroup>
                 <col span="6">
             </colgroup>
             <tbody>
                 <tr>
-                    <th><img src="media/gmail.png" alt="Gmail icon" height="15"></th>
+                    <th><img src="media/gmail.png" alt="Email Icon" height="15"></th>
                     <td>Email</td>
-                    <th><img src="media/linkedin.png" alt="LinkedIn icon" height="15"></th>
+                    <th><img src="media/linkedin.png" alt="LinkedIn Icon" height="15"></th>
                     <td>LinkedIn</td>
-                    <th><img src="media/github.svg" alt="GitHub icon" height="15"></th>
+                    <th><img src="media/github.svg" alt="GitHub Icon" height="15"></th>
                     <td>GitHub</td>
                 </tr>
             </tbody>
