--- a/experience.html
+++ b/experience.html
@@ -20,7 +20,6 @@
             <a href="hobbies.html" class="nav-link">Hobbies/Interests</a>
         </nav>
     </header>
-    <hr>
     <main id="main-content">
         <h1 id="experience-title">Technical Experience</h1>
 
@@ -33,7 +32,10 @@
             <div class="experience-content">
                 <img src="media/leadyouth.png" alt="LeadYouth company logo" class="company-logo">
                 <div class="experience-text">
-                    <p>At LeadYouth, I will be developing an AI-driven mobile app aimed at enhancing leadership training for youth. This project involves integrating AI models to support features such as personality development, leadership simulations, and speech training. Over four months, I will design, develop, and test the app, ensuring it aligns with LeadYouth’s mission.</p>
+                    <p>At LeadYouth, I will be developing an AI-driven mobile app aimed at enhancing leadership training
+                        for youth. This project involves integrating AI models to support features such as personality
+                        development, leadership simulations, and speech training. Over four months, I will design,
+                        develop, and test the app, ensuring it aligns with LeadYouth’s mission.</p>
                 </div>
             </div>
             <div class="experience-footer">
@@ -49,7 +51,11 @@
             </div>
             <div class="experience-content reverse">
                 <div class="experience-text">
-                    <p>At Tag-N-Trac, I developed an AI assistant using OpenAI's Assistant API to enable natural language queries on the company dashboard. This improved user experience by making data retrieval and analysis more intuitive. I also integrated backend systems with API endpoints to track asset lifecycles, retrieve sensor data, manage alerts, and generate reports, streamlining logistics and monitoring processes.</p>
+                    <p>At Tag-N-Trac, I developed an AI assistant using OpenAI's Assistant API to enable natural
+                        language queries on the company dashboard. This improved user experience by making data
+                        retrieval and analysis more intuitive. I also integrated backend systems with API endpoints to
+                        track asset lifecycles, retrieve sensor data, manage alerts, and generate reports, streamlining
+                        logistics and monitoring processes.</p>
                 </div>
                 <img src="media/tagntrac.png" alt="Tag-N-Trac company logo" class="company-logo">
             </div>
@@ -67,7 +73,10 @@
             <div class="experience-content">
                 <img src="media/hermes.png" alt="Hermes Epitek company logo" class="company-logo">
                 <div class="experience-text">
-                    <p>I built a dynamic web application that visualized historical factory alarm data using JavaScript, Chart.js, and MySQL, enabling users to analyze trends through interactive graphs. By implementing API integration, I optimized data filtering and extraction, improving the accuracy and accessibility of operational insights for manufacturing decision-making.</p>
+                    <p>I built a dynamic web application that visualized historical factory alarm data using JavaScript,
+                        Chart.js, and MySQL, enabling users to analyze trends through interactive graphs. By
+                        implementing API integration, I optimized data filtering and extraction, improving the accuracy
+                        and accessibility of operational insights for manufacturing decision-making.</p>
                 </div>
             </div>
             <div class="experience-footer">
@@ -83,7 +92,10 @@
             </div>
             <div class="experience-content reverse">
                 <div class="experience-text">
-                    <p>I worked on <strong>Proofessor</strong>, an AI tutor leveraging GPT-4 to assist students in writing mathematical proofs. Using Python, prompt engineering, and OpenAI’s API, I designed interactive tutoring sessions that provided structured feedback. Additionally, I integrated Lean 4 for auto-formalization, enhancing proof validation and student learning outcomes.</p>
+                    <p>I worked on <strong>Proofessor</strong>, an AI tutor leveraging GPT-4 to assist students in
+                        writing mathematical proofs. Using Python, prompt engineering, and OpenAI’s API, I designed
+                        interactive tutoring sessions that provided structured feedback. Additionally, I integrated Lean
+                        4 for auto-formalization, enhancing proof validation and student learning outcomes.</p>
                 </div>
                 <img src="media/ersp.jpeg" alt="ERSP program research project logo" class="company-logo">
             </div>
@@ -101,7 +113,9 @@
             <div class="experience-content">
                 <img src="media/tutor.png" alt="UCSD Computer Science tutoring icon" class="company-logo">
                 <div class="experience-text">
-                    <p>I led lab sessions for <em>80</em> students in CSE 15L (Software Tools & Techniques Lab), teaching Linux OS, Vim, shell scripting, JUnit testing, and Git version control. I provided hands-on guidance, helping students build foundational software development skills.</p>
+                    <p>I led lab sessions for <em>80</em> students in CSE 15L (Software Tools & Techniques Lab),
+                        teaching Linux OS, Vim, shell scripting, JUnit testing, and Git version control. I provided
+                        hands-on guidance, helping students build foundational software development skills.</p>
                 </div>
             </div>
             <div class="experience-footer">
@@ -109,10 +123,27 @@
             </div>
         </section>
     </main>
-    <hr>
     <footer id="site-footer">
-        <p>San Diego, CA</p>
-        <a href="docs/justin_yang_resume.pdf" target="_blank">Resume</a>
+        <table id="contact-info" class="contact-table">
+            <caption>Contact info:</caption>
+            <colgroup>
+                <col span="6">
+            </colgroup>
+            <tbody>
+                <tr>
+                    <th><img src="media/gmail.png" alt="Email Icon" height="15"></th>
+                    <td>Email</td>
+                    <th><img src="media/linkedin.png" alt="LinkedIn Icon" height="15"></th>
+                    <td>LinkedIn</td>
+                    <th><img src="media/github.svg" alt="GitHub Icon" height="15"></th>
+                    <td>GitHub</td>
+                </tr>
+            </tbody>
+        </table>
+        <address id="location-info">
+            <p>San Diego, CA</p>
+        </address>
+        <a href="docs/justin_yang_resume.pdf" target="_blank" id="resume-link">Resume</a>
     </footer>
 </body>
 
