--- a/honors.html
+++ b/honors.html
@@ -9,60 +9,60 @@
     <meta name="keywords" content="Justin Yang, personal website, portfolio, resume, internship, recruiter, job">
     <title>Honors/Awards</title>
     <link rel="stylesheet" href="styles.css">
-    <style></style>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="index.html">About Me</a>
-            <a href="education.html">Education</a>
-            <a href="experience.html">Experience</a>
-            <a href="honors.html">Honors/Awards</a>
-            <a href="hobbies.html">Hobbies/Interests</a>
-            <a href="experiment.html">Experiment Page</a>
+    <header id="site-header">
+        <nav id="main-nav" class="navigation">
+            <a href="index.html" class="nav-link">About Me</a>
+            <a href="education.html" class="nav-link">Education</a>
+            <a href="experience.html" class="nav-link">Experience</a>
+            <a href="honors.html" class="nav-link">Honors/Awards</a>
+            <a href="hobbies.html" class="nav-link">Hobbies/Interests</a>
         </nav>
     </header>
-    <hr>
-    <main>
-        <h1>Honors/Awards</h1>
-        <section>
-            <h2>IDEA Scholar</h2>
-            <p>2022</p>
-            <img src="media/idea.jpeg" alt="Photo" width="250">
-            <p>Selected as <em>1 of 40 out of 400 applicants</em> within the Jacobs School of Engineering</p>
+    <main id="honors-content">
+        <h1 class="page-title">Honors & Awards</h1>
+
+        <section class="honor-entry">
+            <h2 class="honor-title">IDEA Scholar</h2>
+            <p class="honor-year">2022</p>
+            <img src="media/idea.jpeg" alt="IDEA Scholar Award" class="honor-image">
+            <p class="honor-description">
+                Selected as <em>1 of 40 out of 400 applicants</em> within the Jacobs School of Engineering.
+            </p>
         </section>
-        <section>
-            <h2>ServiceNow Scholar</h2>
-            <p>2022</p>
-            <img src="media/servicenow.png" alt="Photo" width="250">
-            <p>Selected as <em>1 of 9 undergrad CS students</em> within the Jacobs School of Engineering.</p>
+
+        <section class="honor-entry">
+            <h2 class="honor-title">ServiceNow Scholar</h2>
+            <p class="honor-year">2022</p>
+            <img src="media/servicenow.png" alt="ServiceNow Scholar Award" class="honor-image">
+            <p class="honor-description">
+                Selected as <em>1 of 9 undergrad CS students</em> within the Jacobs School of Engineering.
+            </p>
         </section>
     </main>
-    <hr>
-    <footer>
-        <table>
-            <caption>
-                Contact info:
-            </caption>
+    <footer id="site-footer">
+        <table id="contact-info" class="contact-table">
+            <caption>Contact info:</caption>
             <colgroup>
                 <col span="6">
             </colgroup>
             <tbody>
                 <tr>
-                    <th><img src="media/gmail.png" alt="Photo" height="15"></th>
+                    <th><img src="media/gmail.png" alt="Email Icon" height="15"></th>
                     <td>Email</td>
-                    <th><img src="media/linkedin.png" alt="Photo" height="15"></th>
+                    <th><img src="media/linkedin.png" alt="LinkedIn Icon" height="15"></th>
                     <td>LinkedIn</td>
-                    <th><img src="media/github.svg" alt="Photo" height="15"></th>
+                    <th><img src="media/github.svg" alt="GitHub Icon" height="15"></th>
                     <td>GitHub</td>
                 </tr>
             </tbody>
         </table>
-        <address>
-            <p>San Dieog, CA</p>
+        <address id="location-info">
+            <p>San Diego, CA</p>
         </address>
-        <a href="docs/justin_yang_resume.pdf" target="_blank">Resume</a>
+        <a href="docs/justin_yang_resume.pdf" target="_blank" id="resume-link">Resume</a>
     </footer>
 </body>
 
