--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             <a href="hobbies.html" class="nav-link">Hobbies/Interests</a>
         </nav>
     </header>
-    <hr>
     <main id="main-content">
         <section id="profile" class="profile-section">
             <div class="profile-container">
@@ -31,14 +30,18 @@
                     <code>Hello, World!</code>
                     <pre>I'm Justin!</pre>
                     <p>
-                        I’m a junior at UC San Diego studying computer science, originally from San Diego, CA. I’ve always
+                        I’m a junior at UC San Diego studying computer science, originally from San Diego, CA. I’ve
+                        always
                         been passionate about software development, especially backend systems, AI applications, and
-                        embedded systems. I love the challenge of building scalable and efficient solutions. I’m currently
-                        seeking internships for summer 2025 to further develop my skills and gain hands-on experience in the
+                        embedded systems. I love the challenge of building scalable and efficient solutions. I’m
+                        currently
+                        seeking internships for summer 2025 to further develop my skills and gain hands-on experience in
+                        the
                         tech industry.
                     </p>
                     <p>
-                        On my free time, I enjoy hiking and traveling—whether it's exploring national parks or discovering
+                        On my free time, I enjoy hiking and traveling—whether it's exploring national parks or
+                        discovering
                         new cities. I’m also a big basketball fan, both playing and watching games whenever I get the
                         chance.
                     </p>
@@ -50,7 +53,6 @@
             <img src="media/self_pic3.jpg" alt="Justin's Photo 3" class="gallery-image">
         </section>
     </main>
-    <hr>
     <footer id="site-footer">
         <table id="contact-info" class="contact-table">
             <caption>Contact info:</caption>
