--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <main id="main-content">
         <section id="profile" class="profile-section">
             <div class="profile-container">
-                <img src="media/self_pic1.jpg" alt="Justin's Photo" class="profile-picture">
-                <aside class="about-me">
+                <div>
                     <h2>About Me</h2>
                     <code>Hello, World!</code>
                     <pre>I'm Justin!</pre>
@@ -45,10 +44,11 @@
                         new cities. I’m also a big basketball fan, both playing and watching games whenever I get the
                         chance.
                     </p>
-                </aside>
+                </div>
             </div>
         </section>
         <section id="gallery" class="photo-grid">
+            <img src="media/self_pic1.jpg" alt="Justin's Photo 1" class="gallery-image">
             <img src="media/self_pic2.jpg" alt="Justin's Photo 2" class="gallery-image">
             <img src="media/self_pic3.jpg" alt="Justin's Photo 3" class="gallery-image">
         </section>
