--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="Justin Yang, personal website, portfolio, resume, internship, recruiter, job">
     <title>Justin's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 </head>
 
 <body>
@@ -20,6 +21,11 @@
             <a href="honors.html" class="nav-link">Honors/Awards</a>
             <a href="hobbies.html" class="nav-link">Hobbies/Interests</a>
         </nav>
+        <div class="hamburger-menu" onclick="toggleMenu()">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </header>
     <main id="main-content">
         <section id="profile" class="profile-section">
