--- a/experience.html
+++ b/experience.html
@@ -8,7 +8,6 @@
     <meta name="keywords" content="Justin Yang, personal website, portfolio, resume, internship, recruiter, job">
     <title>Technical Experience</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 </head>
 
 <body>
@@ -20,7 +19,7 @@
             <a href="honors.html" class="nav-link">Honors/Awards</a>
             <a href="hobbies.html" class="nav-link">Hobbies/Interests</a>
         </nav>
-        <div class="hamburger-menu" onclick="toggleMenu()">
+        <div class="hamburger-menu">
             <div></div>
             <div></div>
             <div></div>
